Edit graph.js and index.html

--- a/ttc-2019-delays/templates/index.html
+++ b/ttc-2019-delays/templates/index.html
@@ -47,6 +47,8 @@
       <div class="col-md-3 well">
           <h5>Subway Line:</h5>
           <select id="subway_filter" onchange="optionChanged(this.value)"></select>
+          <h5>Year:</h5>
+          <select id="year_filter" onchange="optionChanged(this.value)"></select>
           <h5>Month:</h5>
           <select id="month_filter" onchange="optionChanged(this.value)"></select>
       </div>
@@ -63,7 +65,7 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="../static/js/config.js"></script>
   <script src="../static/js/map1.js"></script>
-  <script src="../static/js/time_day_graph.js"></script>
+  <!-- <script src="../static/js/graph.js"></script> -->
  
 </body>
 
