--- a/ttc-2019-delays/templates/index.html
+++ b/ttc-2019-delays/templates/index.html
@@ -64,7 +64,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="../static/js/config.js"></script>
-  <script src="../static/js/map1.js"></script>
+  <script src="../static/js/map.js"></script>
   <!-- <script src="../static/js/graph.js"></script> -->
  
 </body>
