--- a/ttc-2019-delays/templates/index.html
+++ b/ttc-2019-delays/templates/index.html
@@ -2,136 +2,136 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>TTC_Subway_Delay_Dashboard</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
- 
-  <!-- Leaflet CSS & JS -->
- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
- integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
- crossorigin=""/>
- <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
-  integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
- crossorigin=""></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>TTC Subway Delay Dashboard</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-<!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+    <!-- Leaflet CSS & JS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
+
+    <!-- Our CSS -->
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-light" id="mainmenu">
-    <div class="container">
-        <a href="#"><button type="button" class="btn btn-lg" id="LatButton"> Latitude </button></a>
-        <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navbar9">
+    <!-- NAV BAR STARTS -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="navbar-collapse collapse" id="navbar9">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Plot </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a href="#" class="dropdown-item">Max Temperature</a>
+
+        <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link">TTC Subway Delay Dashboard<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Comparison</a>
+                    <a class="nav-link" href="#map">Map<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Data</a>
+                    <a class="nav-link" href="#predict">Predictions</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#stats">Statistics</a>
                 </li>
             </ul>
         </div>
-    </div>
-</nav>
+    </nav>
+    <!-- NAV BAR ENDS -->
 
-  <div class="container">
-    <div class="row">
-      <!-- <div class="col-md-12 jumbotron text-center">
+    <div class="container">
+        <div class="row">
+            <!-- <div class="col-md-12 jumbotron text-center">
         <h1>TTC_Subway_Delay_Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
-      </div>   -->   
+      </div>   -->
+        </div>
+        <div class="hero text-center">
+            <h1>TTC Subway Delay Dashboard</h1>
+            <!-- <p>Use the interactive charts below to explore the dataset</p> -->
+            <br>
+        </div>
+
+        <br>
+
+        <!-- The div that holds the map -->
+        <div class="leaflet" id="map">
+            <h3><a id="map">Map</a></h3> Leaflet Map
+        </div>
+
+        <br>
+
+        <!-- The div that holds the D3 graph and filters -->
+        <div class="row">
+            <div class="col-md-3 well">
+                <h3><a id="predict">Predictions</a></h3>
+                <h5>Subway Line:</h5>
+                <select id="subway_filter" onchange="optionChanged(this.value)"></select>
+                <h5>Year:</h5>
+                <select id="year_filter" onchange="optionChanged(this.value)"></select>
+                <h5>Month:</h5>
+                <select id="month_filter" onchange="optionChanged(this.value)"></select>
+            </div>
+
+            <div class="col-md-9">
+                <div id="graph"></div>
+            </div>
+        </div>
+        <div class='tableauPlaceholder' id='viz1584809559611' style='position: relative'>
+            <h3><a id="stats"></a></h3>
+            <noscript>
+                <a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;TorontoTransitCommissionAnalysis&#47;SubwayDelayDashboard&#47;1_rss.png' style='border: none' /></a>
+            </noscript>
+            <object class='tableauViz' style='display:none;'>
+                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                <param name='embed_code_version' value='3' />
+                <param name='site_root' value='' />
+                <param name='name' value='TorontoTransitCommissionAnalysis&#47;SubwayDelayDashboard' />
+                <param name='tabs' value='no' />
+                <param name='toolbar' value='yes' />
+                <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;TorontoTransitCommissionAnalysis&#47;SubwayDelayDashboard&#47;1.png' />
+                <param name='animate_transition' value='yes' />
+                <param name='display_static_image' value='yes' />
+                <param name='display_spinner' value='yes' />
+                <param name='display_overlay' value='yes' />
+                <param name='display_count' value='yes' />
+                <param name='filter' value='publish=yes' />
+            </object>
+        </div>
+        <script type='text/javascript'>
+            var divElement = document.getElementById('viz1584809559611');
+            var vizElement = divElement.getElementsByTagName('object')[0];
+            if (divElement.offsetWidth > 800) {
+                vizElement.style.width = '1140px';
+                vizElement.style.height = '4027px';
+            } else if (divElement.offsetWidth > 500) {
+                vizElement.style.width = '1140px';
+                vizElement.style.height = '4027px';
+            } else {
+                vizElement.style.width = '100%';
+                vizElement.style.height = '4227px';
+            }
+            var scriptElement = document.createElement('script');
+            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);
+        </script>
     </div>
-    <div class="hero text-center">
-      <h1>TTC Subway Delay Dashboard</h1>
-      <!-- <p>Use the interactive charts below to explore the dataset</p> -->
-	  <br>
-    </div> 
 
-    <br>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="../static/js/config.js"></script>
 
-    <!-- The div that holds the map -->    
-     <div class="leaflet" id="map"> Leaflet Map</div>
-     
-    <br>
+    <script src="../static/js/map2.js"></script>
+    <!-- <script src="../static/js/graph.js"></script> -->
 
-    <div class='tableauPlaceholder' id='viz1584493264434' style='position: relative'>
-      <noscript>
-          <a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;TorontoTransitCommissionAnalysis&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a>
-      </noscript>
-      <object class='tableauViz' style='display:none;'>
-          <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-          <param name='embed_code_version' value='3' />
-          <param name='site_root' value='' />
-          <param name='name' value='TorontoTransitCommissionAnalysis&#47;Dashboard1' />
-          <param name='tabs' value='no' />
-          <param name='toolbar' value='yes' />
-          <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;TorontoTransitCommissionAnalysis&#47;Dashboard1&#47;1.png' />
-          <param name='animate_transition' value='yes' />
-          <param name='display_static_image' value='yes' />
-          <param name='display_spinner' value='yes' />
-          <param name='display_overlay' value='yes' />
-          <param name='display_count' value='yes' />
-      </object>
-  </div>
-
-    <!-- The div that holds the D3 graph and filters -->
-    <div class="row">
-      <div class="col-md-3 well">
-          <h5>Subway Line:</h5>
-          <select id="subway_filter" onchange="optionChanged(this.value)"></select>
-          <h5>Year:</h5>
-          <select id="year_filter" onchange="optionChanged(this.value)"></select>
-          <h5>Month:</h5>
-          <select id="month_filter" onchange="optionChanged(this.value)"></select>
-      </div>
-       
-      <div class="col-md-9">
-        <div id="graph"></div>
-      </div>      
-    </div>
-    
-    </div>
-
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="../static/js/config.js"></script>
-<<<<<<< HEAD
-  <script src="../static/js/map.js"></script>
-  
-  <script type='text/javascript'>
-    var divElement = document.getElementById('viz1584493264434');
-    var vizElement = divElement.getElementsByTagName('object')[0];
-    if (divElement.offsetWidth > 800) {
-        vizElement.style.width = '1550px';
-        vizElement.style.height = '4027px';
-    } else if (divElement.offsetWidth > 500) {
-        vizElement.style.width = '1550px';
-        vizElement.style.height = '4027px';
-    } else {
-        vizElement.style.width = '100%';
-        vizElement.style.height = '3927px';
-    }
-    var scriptElement = document.createElement('script');
-    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-    vizElement.parentNode.insertBefore(scriptElement, vizElement);
-  </script>
-=======
-  <script src="../static/js/map2.js"></script>
->>>>>>> 5c140c32651204bc14b5a6be87c40385df8182a8
-  <!-- <script src="../static/js/graph.js"></script> -->
- 
 </body>
 
 </html>
