--- a/ttc-2019-delays/templates/index.html
+++ b/ttc-2019-delays/templates/index.html
@@ -80,7 +80,7 @@
         <div class="col-md-4 well">
             <h5>Month:</h5>
             <select id="month_filter" onchange="optionChanged(this.value)"></select>
-            <h5>Day:</h5>
+            <h5>Day of the Week:</h5>
             <select id="day_filter" onchange="optionChanged(this.value)"></select>
             <h5>Hour:</h5>
             <select id="hour_filter" onchange="optionChanged(this.value)"></select>   
