--- a/ttc-2019-delays/templates/index.html
+++ b/ttc-2019-delays/templates/index.html
@@ -137,6 +137,44 @@
             scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
             vizElement.parentNode.insertBefore(scriptElement, vizElement);
         </script>
+
+       <div class='tableauPlaceholder' id='viz1585200878830' style='position: relative'>
+            <noscript>
+            <a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;TT&#47;TTC_Deley_2018-2019&#47;DashboardofDelaycodecount&#47;1_rss.png' style='border: none' /></a>
+            </noscript>
+            <object class='tableauViz' style='display:none;'>
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+            <param name='embed_code_version' value='3' />
+            <param name='site_root' value='' />
+            <param name='name' value='TTC_Deley_2018-2019&#47;DashboardofDelaycodecount' />
+            <param name='tabs' value='no' />
+            <param name='toolbar' value='yes' />
+            <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;TT&#47;TTC_Deley_2018-2019&#47;DashboardofDelaycodecount&#47;1.png' />
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' />
+            <param name='filter' value='publish=yes' />
+            </object>
+        </div>
+        <script type='text/javascript'>
+            var divElement = document.getElementById('viz1585200878830');
+            var vizElement = divElement.getElementsByTagName('object')[0];
+            if (divElement.offsetWidth > 800) {
+            vizElement.style.width = '1140px';
+            vizElement.style.height = '1027px';
+            } else if (divElement.offsetWidth > 500) {
+            vizElement.style.width = '1140px';
+            vizElement.style.height = '1027px';
+            } else {
+            vizElement.style.width = '100%';
+            vizElement.style.height = '1977px';
+            }
+            var scriptElement = document.createElement('script');
+            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);
+        </script>
     </div>
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
